--- a/gamll-manage-web/pom.xml
+++ b/gamll-manage-web/pom.xml
@@ -20,10 +20,21 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.csource</groupId>
+			<artifactId>fastdfs-client-java</artifactId>
+			<version>1.29-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+		</dependency>
+		<dependency>
 			<groupId>com.atecut.gamll</groupId>
 			<artifactId>gmall-web-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
+        </dependency>
 		<dependency>
 			<groupId>com.atecut.gamll</groupId>
 			<artifactId>gmall-interface</artifactId>
