--- a/gamll-manage-web/src/main/resources/application.properties
+++ b/gamll-manage-web/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.dubbo.base-package=com.atecut.gmall
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.consumer.timeout=10000
 spring.dubbo.consumer.check=false
+fileServer.url=http://192.168.8.3
