--- a/gamll-manage-web/pom.xml
+++ b/gamll-manage-web/pom.xml
@@ -22,8 +22,8 @@
 		<dependency>
 			<groupId>org.csource</groupId>
 			<artifactId>fastdfs-client-java</artifactId>
-			<version>1.29-SNAPSHOT</version>
-            <exclusions>
+			<version>1.27</version>
+			<exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
