--- a/gmall-manage-service/pom.xml
+++ b/gmall-manage-service/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>gmall-service-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
