--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 logging.level.root=debug
 spring.dubbo.application.name=manage-service
 spring.dubbo.registry.protocol=zookeeper
-spring.dubbo.registry.address=192.168.8.3:2181
+spring.dubbo.registry.address=192.168.119.3:2181
 spring.dubbo.base-package=com.atecut.gmall
 spring.dubbo.protocol.name=dubbo
-spring.datasource.url=jdbc:mysql://192.168.8.3:3306/gmall?useSSL=true
+spring.datasource.url=jdbc:mysql://192.168.119.3:3306/gmall?useSSL=true
 spring.datasource.username=root
 spring.datasource.password=p11111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
+
+spring.redis.host=192.168.119.3
+spring.redis.port=6379
+spring.redis.database=0
